# rest/request/get-navigations.php
@@ -56,7 +56,6 @@ class requestGetNavigations extends RequestBase {
                 n.permission_id,
                 n.sort_order,
                 n.is_active,
-                n.is_external,
                 n.target,
                 n.css_class,
                 n.badge_text,
@@ -98,7 +97,6 @@ class requestGetNavigations extends RequestBase {
                 'permission_id' => $nav['permission_id'] !== null ? (int)$nav['permission_id'] : null,
                 'sort_order' => (int)$nav['sort_order'],
                 'is_active' => (bool)$nav['is_active'],
-                'is_external' => (bool)$nav['is_external'],
                 'target' => $nav['target'],
                 'css_class' => $nav['css_class'],
                 'badge_text' => $nav['badge_text'],
